--- a/app/templates/optimize_video/index.html
+++ b/app/templates/optimize_video/index.html
@@ -45,6 +45,13 @@
                         </div>
                     </div>
 
+                    <!-- Empty State (No Channel Connected) -->
+                    <div id="emptyVideos" class="empty-state" style="display: none;">
+                        <i class="ph ph-youtube-logo"></i>
+                        <p>No YouTube Channel Connected</p>
+                        <span>Connect your YouTube account in Social Accounts or use the URL option above to optimize any video</span>
+                    </div>
+
                     <!-- URL Input Section -->
                     <div id="urlInputSection" style="display: none;">
                         <div class="url-input-container">
@@ -72,11 +79,6 @@
                     </div>
                     <div id="myVideosGrid" class="videos-grid">
                         <!-- Videos will be populated here -->
-                    </div>
-                    <div id="emptyVideos" class="empty-state" style="display: none;">
-                        <i class="ph ph-youtube-logo"></i>
-                        <p>No YouTube Channel Connected</p>
-                        <span>Connect your YouTube account in Social Accounts or use the URL option above to optimize any video</span>
                     </div>
                 </div>
 
