--- a/app/templates/optimize_video/index.html
+++ b/app/templates/optimize_video/index.html
@@ -82,20 +82,7 @@
                     </div>
                 </div>
 
-                <!-- My Shorts Section -->
-                <div class="my-videos-section" id="channelShortsSection" style="display: none;">
-                    <div class="section-header">
-                        <h3 class="section-title">
-                            <i class="ph ph-device-mobile"></i>
-                            My Shorts
-                        </h3>
-                    </div>
-                    <div id="myShortsGrid" class="videos-grid">
-                        <!-- Shorts will be populated here -->
-                    </div>
-                </div>
-
-                <!-- Optimization History -->
+                <!-- Optimization History (moved up) -->
                 <div class="history-section">
                     <h3 class="section-title">
                         <i class="ph ph-clock-counter-clockwise"></i>
@@ -108,6 +95,19 @@
                         <i class="ph ph-magic-wand"></i>
                         <p>No optimizations yet</p>
                         <span>Start by optimizing a video above</span>
+                    </div>
+                </div>
+
+                <!-- My Shorts Section -->
+                <div class="my-videos-section" id="channelShortsSection" style="display: none;">
+                    <div class="section-header">
+                        <h3 class="section-title">
+                            <i class="ph ph-device-mobile"></i>
+                            My Shorts
+                        </h3>
+                    </div>
+                    <div id="myShortsGrid" class="videos-grid">
+                        <!-- Shorts will be populated here -->
                     </div>
                 </div>
             </div>
