--- a/app/templates/reply_guy/index.html
+++ b/app/templates/reply_guy/index.html
@@ -115,28 +115,28 @@
                                     <i class="ph ph-caret-down dropdown-arrow"></i>
                                 </div>
                                 <div class="dropdown-menu" id="list-dropdown-menu">
-                                    {% if custom_lists %}
-                                    <div class="dropdown-group">
-                                        <div class="dropdown-group-label">Custom Lists</div>
-                                        {% for list in custom_lists %}
-                                        <div class="dropdown-option" data-value="{{ list.id }}" data-type="custom">
-                                            <span>{{ list.name }}</span>
-                                        </div>
-                                        {% endfor %}
-                                    </div>
-                                    {% endif %}
-                                    <div class="dropdown-group">
-                                        <div class="dropdown-group-label">Default Lists</div>
+                                    {% if default_lists or custom_lists %}
                                         {% for list in default_lists %}
                                         <div class="dropdown-option" data-value="{{ list.id }}" data-type="default">
-                                            <span>{{ list.name }}</span>
+                                            {{ list.name }}
                                         </div>
                                         {% endfor %}
-                                    </div>
-                                    <div class="dropdown-option create-new" id="create-new-list">
-                                        <i class="ph ph-plus" style="margin-right: 0.5rem;"></i>
-                                        <span>X List</span>
-                                    </div>
+                                        {% for list in custom_lists %}
+                                        <div class="dropdown-option" data-value="{{ list.id }}" data-type="custom">
+                                            {{ list.name }}
+                                        </div>
+                                        {% endfor %}
+                                        <div class="dropdown-divider"></div>
+                                        <div class="dropdown-option create-new" id="create-new-list">
+                                            <i class="ph ph-plus-circle"></i>
+                                            <span>Add X List</span>
+                                        </div>
+                                    {% else %}
+                                        <div class="dropdown-option create-new" id="create-new-list">
+                                            <i class="ph ph-plus-circle"></i>
+                                            <span>Add X List</span>
+                                        </div>
+                                    {% endif %}
                                 </div>
                             </div>
                         </div>
@@ -302,28 +302,28 @@
                                     <i class="ph ph-caret-down dropdown-arrow"></i>
                                 </div>
                                 <div class="dropdown-menu" id="list-dropdown-menu-empty">
-                                    {% if custom_lists %}
-                                    <div class="dropdown-group">
-                                        <div class="dropdown-group-label">Custom Lists</div>
-                                        {% for list in custom_lists %}
-                                        <div class="dropdown-option" data-value="{{ list.id }}" data-type="custom">
-                                            <span>{{ list.name }}</span>
-                                        </div>
-                                        {% endfor %}
-                                    </div>
-                                    {% endif %}
-                                    <div class="dropdown-group">
-                                        <div class="dropdown-group-label">Default Lists</div>
+                                    {% if default_lists or custom_lists %}
                                         {% for list in default_lists %}
                                         <div class="dropdown-option" data-value="{{ list.id }}" data-type="default">
-                                            <span>{{ list.name }}</span>
+                                            {{ list.name }}
                                         </div>
                                         {% endfor %}
-                                    </div>
-                                    <div class="dropdown-option create-new" id="create-new-list-empty">
-                                        <i class="ph ph-plus" style="margin-right: 0.5rem;"></i>
-                                        <span>X List</span>
-                                    </div>
+                                        {% for list in custom_lists %}
+                                        <div class="dropdown-option" data-value="{{ list.id }}" data-type="custom">
+                                            {{ list.name }}
+                                        </div>
+                                        {% endfor %}
+                                        <div class="dropdown-divider"></div>
+                                        <div class="dropdown-option create-new" id="create-new-list-empty">
+                                            <i class="ph ph-plus-circle"></i>
+                                            <span>Add X List</span>
+                                        </div>
+                                    {% else %}
+                                        <div class="dropdown-option create-new" id="create-new-list-empty">
+                                            <i class="ph ph-plus-circle"></i>
+                                            <span>Add X List</span>
+                                        </div>
+                                    {% endif %}
                                 </div>
                             </div>
                         </div>
@@ -341,35 +341,39 @@
     </div>
 </div>
 
-<!-- Simple X List Input Panel Modal -->
-<div id="create-list-modal" style="display: none;">
+<!-- Create X List Modal -->
+<div id="create-list-modal" class="modal">
     <div class="modal-content">
-        <div class="form-section">
-            <h3 class="form-title">
+        <div class="modal-header">
+            <h3 class="modal-title">
                 <i class="ph ph-plus-circle"></i>
-                Add Custom X List
+                Add X List
             </h3>
-
-            <div class="simple-form">
-                <div class="form-group">
-                    <label for="simple-list-name">List Name</label>
-                    <input type="text" id="simple-list-name" class="form-input" placeholder="Enter a name for your list...">
-                </div>
-
-                <div class="form-group">
-                    <label for="simple-x-list-id">X List ID</label>
-                    <input type="text" id="simple-x-list-id" class="form-input" placeholder="Enter X List ID...">
-                    <small class="form-help">Find this in the URL of any X list (e.g., x.com/i/lists/1234567890)</small>
-                </div>
-
-                <div class="form-actions">
-                    <button id="simple-create-btn" class="primary-btn">
-                        <i class="ph ph-plus"></i>
-                        Add List
-                    </button>
-                    <button id="cancel-create-btn" class="secondary-btn">Cancel</button>
+            <button class="modal-close" id="close-create-modal">&times;</button>
+        </div>
+        <div class="modal-body">
+            <div class="form-group">
+                <label for="simple-list-name">List Name</label>
+                <input type="text" id="simple-list-name" class="form-input" placeholder="Enter list name...">
+            </div>
+            <div class="form-group">
+                <label for="simple-x-list-id">X List ID</label>
+                <input type="text" id="simple-x-list-id" class="form-input" placeholder="Enter X List ID...">
+            </div>
+            <div class="info-box" style="margin-top: 1rem;">
+                <i class="ph ph-info"></i>
+                <div class="info-content">
+                    <div class="info-title">How to find your X List ID</div>
+                    <div class="info-text">Go to your list on X and copy the last part from the URL.<br>For example: x.com/i/lists/<strong>1234567890</strong></div>
                 </div>
             </div>
+        </div>
+        <div class="modal-footer">
+            <button id="cancel-create-btn" class="secondary-btn">Cancel</button>
+            <button id="simple-create-btn" class="primary-btn">
+                <i class="ph ph-plus"></i>
+                Add X List
+            </button>
         </div>
     </div>
 </div>
